<resources>
    <string name="app_name">Escal\'ade</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_voie">Voies</string>
    <string name="menu_bloc">Blocs</string>
    <string name="menu_site">Sites</string>
    <string name="nom_du_site">Nom du site</string>
    <string name="interieur">Interieur</string>
    <string name="adresse">Adresse</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="_02">02********</string>
    <string name="url">url</string>
    <string name="nom_du_bloc">Nom du bloc</string>
    <string name="bloc">bloc</string>
    <string name="dever">dever</string>
    <string name="toit">toit</string>
    <string name="dalle">dalle</string>
    <string name="reglette">reglette</string>
    <string name="fissure">fissure</string>
    <string name="no_foot">no_foot</string>
    <string name="jetee">jetee</string>
    <string name="hauteur_du_bloc">Hauteur du Bloc</string>
    <string name="difficult_e">Difficultée :</string>
   
    
    <string-array name="array_difficulte">
        <item>3</item>
        <item>3+</item>
        <item>4a</item>
        <item>4b</item>
        <item>4c</item>
        <item>5a</item>
        <item>5b</item>
        <item>5c</item>
        <item>6a</item>
        <item>6a+</item>
        <item>6b</item>
        <item>6b+</item>
        <item>6c</item>
        <item>6c+</item>
        <item>7a</item>
        <item>7a+</item>
        <item>7b</item>
        <item>7b+</item>
        <item>7c</item>
        <item>7c+</item>
        <item>8a</item>
        <item>8a+</item>
        <item>8b</item>
        <item>8b+</item>
        <item>8c</item>
        <item>8c+</item>
        <item>9a</item>
        <item>9a+</item>
        <item>9b</item>
        <item>9b+</item>
        <item>9c</item>
        <item>9c+</item>
    </string-array>
    <string name="annuler">annuler</string>
    <string name="modification">modification</string>
    <string name="site_web">site web</string>
</resources>
