<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreationBlocActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/creation_voie_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/creation_voie_edt_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Nom de la voie"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_tl"
        tools:targetApi="o" />

    <Switch
        android:id="@+id/creation_voie_sw_bloc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:text="@string/bloc"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@+id/txt_voie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_edt_nom" />

    <CheckBox
        android:id="@+id/creation_voie_check_dever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dever"
        app:layout_constraintEnd_toStartOf="@+id/creation_voie_check_dalle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creation_voie_check_toit"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_sw_bloc" />

    <CheckBox
        android:id="@+id/creation_voie_check_toit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/toit"
        app:layout_constraintEnd_toStartOf="@+id/creation_voie_check_dever"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_sw_bloc" />

    <CheckBox
        android:id="@+id/creation_voie_check_dalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dalle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creation_voie_check_dever"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_sw_bloc" />

    <CheckBox
        android:id="@+id/creation_voie_check_reglette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reglette"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_check_jetee" />

    <CheckBox
        android:id="@+id/creation_voie_check_fissure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fissure"
        app:layout_constraintEnd_toStartOf="@+id/creation_voie_check_jetee"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_check_toit" />

    <CheckBox
        android:id="@+id/creation_voie_check_no_foot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/no_foot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creation_voie_check_jetee"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_check_dalle" />

    <CheckBox
        android:id="@+id/creation_voie_check_jetee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/jetee"
        app:layout_constraintEnd_toStartOf="@+id/creation_voie_check_no_foot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creation_voie_check_fissure"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_check_dever" />

    <EditText
        android:id="@+id/creation_voie_hauteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hauteur_du_bloc"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_check_reglette"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/creation_txt_difficulte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="21dp"
        android:text="@string/difficult_e"
        app:layout_constraintEnd_toStartOf="@+id/creation_voie_spinner_difficulte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_hauteur" />

    <TextView
        android:id="@+id/creation_txt_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:text="Site : "
        app:layout_constraintEnd_toStartOf="@+id/creation_voie_spinner_list_site"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_txt_difficulte" />

    <Spinner
        android:id="@+id/creation_voie_spinner_list_site"
        android:layout_width="204dp"
        android:layout_height="18dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/creation_txt_site"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_spinner_difficulte" />

    <CheckBox
        android:id="@+id/creation_voie_valider_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Validé "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_spinner_list_site" />


    <view
        android:id="@+id/creation_voie_rb_note"
        class="me.zhanghai.android.materialratingbar.MaterialRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_valider_check" />

    <Spinner
        android:id="@+id/creation_voie_spinner_difficulte"
        android:layout_width="206dp"
        android:layout_height="27dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/creation_txt_difficulte"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_hauteur" />

    <TextView
        android:id="@+id/txt_voie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="Voie"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/creation_voie_sw_bloc"
        app:layout_constraintTop_toBottomOf="@+id/creation_voie_edt_nom" />

</androidx.constraintlayout.widget.ConstraintLayout>